--- a/HelloMavenSpringWebMVC/pom.xml
+++ b/HelloMavenSpringWebMVC/pom.xml
@@ -6,7 +6,7 @@
   <packaging>war</packaging>
   
   <properties>
-  	<org.springframework.version>3.2.13.RELEASE</org.springframework.version>
+  	<org.springframework.version>4.1.5.RELEASE</org.springframework.version>
   </properties>
   <dependencies>  
   	<dependency>
@@ -68,17 +68,43 @@
             <version>${org.springframework.version}</version>
  </dependency>
  <!-- Jackson JSON Mapper -->  
-<dependency>  
-    <groupId>org.codehaus.jackson</groupId>
-    <artifactId>jackson-mapper-asl</artifactId>
-    <version>1.8.2</version>
-</dependency>
+ <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-annotations</artifactId>
+    <version>2.5.1</version>
+ </dependency>
+ <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-core</artifactId>
+    <version>2.5.1</version>
+ </dependency>
+ <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.5.1</version>
+ </dependency>
 
-<dependency>  
-    <groupId>org.codehaus.jackson</groupId>
-    <artifactId>jackson-core-asl</artifactId>
-    <version>1.8.2</version>
-</dependency>
+<!-- Spring Security -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>4.0.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>4.0.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>4.0.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+            <version>4.0.1.RELEASE</version>
+        </dependency>
   </dependencies>
 
 
