--- a/HelloMavenSpringWebMVC/pom.xml
+++ b/HelloMavenSpringWebMVC/pom.xml
@@ -6,7 +6,7 @@
   <packaging>war</packaging>
   
   <properties>
-  	<org.springframework.version>4.1.5.RELEASE</org.springframework.version>
+  	<org.springframework.version>4.2.1.RELEASE</org.springframework.version>
   </properties>
   <dependencies>  
   	<dependency>
@@ -71,19 +71,24 @@
  <dependency>
     <groupId>com.fasterxml.jackson.core</groupId>
     <artifactId>jackson-annotations</artifactId>
-    <version>2.5.1</version>
+    <version>2.4.1</version>
  </dependency>
  <dependency>
     <groupId>com.fasterxml.jackson.core</groupId>
     <artifactId>jackson-core</artifactId>
-    <version>2.5.1</version>
+    <version>2.4.1</version>
  </dependency>
  <dependency>
     <groupId>com.fasterxml.jackson.core</groupId>
     <artifactId>jackson-databind</artifactId>
-    <version>2.5.1</version>
+    <version>2.4.1</version>
  </dependency>
-
+ <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+ 
 <!-- Spring Security -->
         <dependency>
             <groupId>org.springframework.security</groupId>
